// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when passing data accept valid data Nested x1 1`] = `<div />`;

exports[`when passing data accept valid data Nested x2 1`] = `<div />`;

exports[`when passing data accept valid data Without children 1`] = `<div />`;

exports[`when passing data accept valid data Without children and content 1`] = `<div />`;

exports[`when passing data handle invalid data without error handler throws an error 1`] = `<div />`;

exports[`when passing data handle invalid data without error handler throws correct error message 1`] = `
Object {
  "error": [TypeError: Invalid type of data (data is null or undefined)],
}
`;

exports[`when passing data handle invalid data without error handler throws correct error message 2`] = `
Object {
  "error": [TypeError: Invalid type of data (typeof data !== 'object')],
}
`;

exports[`when passing data handle invalid data without error handler throws correct error message 3`] = `
Object {
  "error": [TypeError: Invalid type of data (typeof data !== 'object')],
}
`;

exports[`when passing data handle invalid data without error handler throws correct error message 4`] = `
Object {
  "error": [TypeError: Invalid type of data (data is an array)],
}
`;

exports[`when passing data handle invalid data without error handler throws correct error message 5`] = `
Object {
  "error": [Error: Missing Field (title)],
}
`;

exports[`when passing data handle invalid data without error handler throws correct error message 6`] = `
Object {
  "error": [Error: Invalid field (title: Provided value is not a string)],
}
`;

exports[`when passing data handle invalid data without error handler throws correct error message 7`] = `
Object {
  "error": [Error: Invalid field (title: Provided value is not a string)],
}
`;

exports[`when passing data handle invalid data without error handler throws correct error message 8`] = `
Object {
  "error": [Error: Invalid field (children: Provided value is neither falsy nor an array)],
}
`;

exports[`when passing data handle invalid data without error handler throws correct error message 9`] = `
Object {
  "error": [Error: Invalid field (children: Provided value is neither falsy nor an array)],
}
`;

exports[`when passing data handle invalid data without error handler throws correct error message 10`] = `
Object {
  "error": [Error: Invalid field (children: Provided value is neither falsy nor an array)],
}
`;

exports[`when passing data handle invalid data without error handler throws correct error message 11`] = `<div />`;

exports[`when passing data handle invalid data without error handler throws correct error message 12`] = `
Object {
  "constructor": undefined,
  "string": undefined,
  "typeof": "undefined",
  "value": undefined,
}
`;
